[gd_scene load_steps=2 format=3 uid="uid://sayqhlslio3r"]

[ext_resource type="Script" uid="uid://x0575qbtu7eo" path="res://volume_controller/volume_controller.gd" id="1_ur2fg"]

[node name="VolumeController" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_ur2fg")

[node name="IncreaseButton" type="Button" parent="."]
layout_mode = 2
text = " + "

[node name="VolumeSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="DecreaseButton" type="Button" parent="."]
layout_mode = 2
text = " - "

[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="DecreaseButton" to="." method="_on_decrease_button_pressed"]
